--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,24 +36,20 @@ jobs:
         include:
           - destination: "OS=16.1,name=iPhone 14 Pro"
             name: "iOS"
-            scheme: "skeleton-ui"
             sdk: iphonesimulator
           - destination: "OS=16.1,name=Apple TV"
             name: "tvOS"
-            scheme: "skeleton-ui"
             sdk: appletvsimulator
           - destination: "OS=9.1,name=Apple Watch Series 8 (45mm)"
             name: "watchOS"
-            scheme: "skeleton-ui"
             sdk: watchsimulator
           - destination: "platform=macOS"
             name: "macOS"
-            scheme: "skeleton-ui"
             sdk: macosx
     steps:
       - uses: actions/checkout@v3
       - name: ${{ matrix.name }}
-        run: xcodebuild test -scheme "${{ matrix.scheme }}" -destination "${{ matrix.destination }}" clean -enableCodeCoverage YES -resultBundlePath "./${{ matrix.sdk }}.xcresult" || exit 1
+        run: xcodebuild test -scheme "SkeletonUI" -destination "${{ matrix.destination }}" clean -enableCodeCoverage YES -resultBundlePath "./${{ matrix.sdk }}.xcresult" || exit 1
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3.1.0
         with:
