--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,9 +23,7 @@ jobs:
         with:
           args: --strict
         env:
-          
           DIFF_BASE: ${{ github.base_ref }}
-          
   Latest:
     name: Test Latest (iOS, macOS, tvOS, watchOS)
     runs-on: macOS-12
@@ -36,35 +34,22 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          
           - destination: "OS=16.1,name=iPhone 14 Pro"
             name: "iOS"
-            scheme: "skeleton-ui"
             sdk: iphonesimulator
-          
-          
           - destination: "OS=16.1,name=Apple TV"
             name: "tvOS"
-            scheme: "skeleton-ui"
             sdk: appletvsimulator
-          
-          
           - destination: "OS=9.1,name=Apple Watch Series 8 (45mm)"
             name: "watchOS"
-            scheme: "skeleton-ui"
             sdk: watchsimulator
-          
-          
           - destination: "platform=macOS"
             name: "macOS"
-            scheme: "skeleton-ui"
             sdk: macosx
-          
     steps:
-      
       - uses: actions/checkout@v3
       - name: ${{ matrix.name }}
-        run: xcodebuild test -scheme "${{ matrix.scheme }}" -destination "${{ matrix.destination }}" clean -enableCodeCoverage YES -resultBundlePath "./${{ matrix.sdk }}.xcresult" || exit 1
+        run: xcodebuild test -scheme "SkeletonUI" -destination "${{ matrix.destination }}" clean -enableCodeCoverage YES -resultBundlePath "./${{ matrix.sdk }}.xcresult" || exit 1
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3.1.0
         with:
@@ -72,7 +57,6 @@ jobs:
           xcode: true
           xcode_archive_path: "./${{ matrix.sdk }}.xcresult"
       
-
   discover-typos:
     name: Discover Typos
     runs-on: macOS-12
