--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ on:
       - '.swiftlint.yml'
       - ".github/workflows/**"
       - "Package.swift"
-      - "Source/**"
+      - "Sources/**"
       - "Tests/**"
 
 jobs:
